--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tavishi Sharma | Computer Science @ ASU</title>
+  <meta name="description" content="Tavishi Sharma — Computer Science major, ASU Barrett Honors. Projects in AI, robotics, and data systems.">
+  <meta name="keywords" content="Tavishi Sharma, Arizona State University, Computer Science, AI, robotics, NASA JPL, Data Analytics, GEM5, finite state machine, bookstore management">
+  <meta property="og:title" content="Tavishi Sharma | AI × Robotics × Data" />
+  <meta property="og:description" content="Projects and experience at the intersection of computer science, robotics, and analytics.">
+  <meta property="og:type" content="website" />
+  <link rel="icon" href="assets/favicon.png" />
   <style>
     :root {
       --bg: #fdf6e3;
       --fg: #1a1a1a;
       --muted: #a0aec0;
       --link: #38bdf8;
-      --chip: #d6d6d6;
-      --chipfg: #222;
-      --chip-border: #888;
+      --chip: #f0e7db;
+      --chipfg: #333;
       --card: #fffbe6;
       --accent: #e5e7eb;
       --highlight: #0b1020;
       --toggle-bg: #ffffff;
       --toggle-text: #1a1a1a;
-      --navline: #888;
-      --subtitle: #222;
-      --tab-bg: #e5e5e5;
-      --tab-fg: #444;
-      --tab-active: #0b1020;
+      --timeline: #4b2679;
+      --small-text: #444;
+      --contact-icon-bg: #f3edff;
       --maxw: 880px;
     }
     .dark-mode {
@@ -31,151 +34,132 @@
       --muted: #ced4dc;
       --link: #38bdf8;
       --chip: #33343b;
-      --chipfg: #e6edf3;
-      --chip-border: #bbb;
+      --chipfg: #c7d2fe;
       --card: #3a3d42;
       --accent: #22292f;
       --highlight: #fff8dc;
       --toggle-bg: #000000;
       --toggle-text: #1a1a1a;
-      --navline: #bbb;
-      --subtitle: #e6edf3;
-      --tab-bg: #33343b;
-      --tab-fg: #ddd;
-      --tab-active: #fff8dc;
+      --timeline: #4b2679;
+      --small-text: #ddd;
+      --contact-icon-bg: #37205a;
     }
-    body {
-      background: var(--bg);
-      color: var(--fg);
-      margin: 0;
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
-      transition: background 0.25s, color 0.25s;
-    }
-    .wrap{
-      max-width:var(--maxw);
-      margin:0 auto;
-      padding:24px;
-    }
-    header{
-      display:flex;
-      gap:24px;
-      align-items:center;
-      padding:32px 0 16px;
-    }
-    header img{
-      width:180px;
-      height:180px;
-      border-radius:16px;
-      object-fit:cover;
-      border:2px solid #e5e7eb;
-    }
-    h1{
-      font-size:2.4em;
-      line-height:1.2;
-      margin:0 0 6px;
-      font-weight:700;
-    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--fg);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif}
+    a{color:var(--link);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:24px}
+    header{display:flex;gap:24px;align-items:center;padding:32px 0 16px}
+    header img{width:180px;height:180px;border-radius:16px;object-fit:cover;border:2px solid #e5e7eb}
+    h1{font-size:32px;line-height:1.2;margin:0 0 6px}
     .subtitle{
-      color: var(--subtitle); 
-      font-size:1.3em;
-      margin-bottom:5px;
+      color:#222;           /* changed: almost black in light mode */
+      font-size:18px;
     }
+    .dark-mode .subtitle{
+      color: #e6edf3;       /* keep default for dark mode */
+    }
+    .links{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
+    .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;background:var(--chip);color:var(--chipfg);font-size:15px;border:1px solid rgba(0,0,0,0.05)}
+    nav{position:sticky;top:0;background:var(--bg);border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;z-index:50}
+    nav .wrap{display:flex;gap:16px;overflow:auto}
+    nav a{padding:14px 6px;white-space:nowrap;color:var(--muted)}
+    nav a.active, nav a:hover{color:var(--fg)}
+    section{padding:32px 0}
+    section h2{font-size:22px;margin:0 0 14px;color:var(--highlight);}
+    p{margin:0 0 14px}
+    ul{margin:8px 0 0 18px}
+    .card{background:var(--card);border:1px solid rgba(0,0,0,0.06);border-radius:12px;padding:18px}
+    .grid{display:grid;grid-template-columns:1fr;gap:16px}
+    @media(min-width:720px){ .grid{grid-template-columns:1fr 1fr}}
+    .pub{display:flex;gap:16px;align-items:flex-start;padding:18px;border-radius:12px;border:1px solid rgba(0,0,0,0.06);background:var(--card)}
+    .pub img{width:80px;height:auto;border-radius:4px;flex-shrink:0}
+    .pub-content{flex:1}
+    .pub h3{margin:0 0 8px;font-size:20px}
+    .pub .meta{color:var(--muted);font-size:14px;margin-bottom:6px}
+    .pub .authors{font-size:15px;margin-bottom:6px}
+    .pub .actions{display:flex;flex-wrap:wrap;gap:10px;margin-top:10px}
+    details{margin-top:8px}
+    code{font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace; font-size:13px}
+    footer{padding:40px 0;color:var(--muted);font-size:14px}
     .small{
       font-size:14px;
-      color:#444;
-      margin-bottom:11px;
-      margin-top:0;
+      color: var(--small-text);
     }
-    .chip{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:8px 12px;
-      border-radius:999px;
-      background:var(--chip);
-      color:var(--chipfg);
-      font-size:15px;
-      border:1px solid var(--chip-border);
-      box-shadow: 0 2px 6px rgba(46,46,46,0.03);
-      transition: background 0.17s, color 0.15s;
-      margin:0 6px 0 0;
-    }
-    .chip:hover{background: #bcbcbc;}
-    nav{
-      position:sticky;top:0;
-      background:var(--bg);
-      border-top:1px solid var(--navline);
-      border-bottom:1px solid var(--navline);
-      z-index:50;
-    }
-    section{
-      padding:32px 0;
-      border-bottom:1px solid var(--navline);
-      margin:0;
-    }
-    .tab-row{
-      display:flex;
-      gap:12px;
-      margin:18px 0 0 0;
-    }
-    .tab-btn{
-      padding:8px 16px;
-      min-width:88px;
-      text-align:center;
-      border:none;
-      border-radius:8px;
-      background:var(--tab-bg);
-      color:var(--tab-fg);
-      font-weight:500;
-      font-size:1.08em;
-      cursor:pointer;
-      transition:background 0.17s,color 0.17s;
-    }
-    .tab-btn.active, .tab-btn:focus{
-      background: #fff;
-      color: var(--tab-active);
-      border:2px solid var(--tab-active);
-      outline:none;
-    }
-    .tab-btn:hover:not(.active){background:#d4d4d4; color:#222;}
-    #themeBtn{
-      margin:0 24px 0 0;
+    #themeBtn {
+      margin: 0 24px 0 0;
       padding:6px 14px;
       border-radius:999px;
       border:none;
       cursor:pointer;
       font-weight:500;
-      background:var(--toggle-bg);
-      color:var(--toggle-text);
-      position:fixed;
-      top:16px;
-      right:16px;
-      z-index:99;
-      box-shadow:0 2px 8px rgba(0,0,0,0.04);
-      font-size:1.4em;
-      line-height:1;
-      width:48px;
-      height:48px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
+      background: var(--toggle-bg);
+      color: var(--toggle-text);
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      z-index: 99;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+      transition: background 0.25s, color 0.25s;
+      font-size: 1.4em;
+      line-height: 1;
+      width: 48px;
+      height: 48px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    #themeBtn:focus{outline:2px solid var(--link);}
+    #themeBtn:focus {outline: 2px solid var(--link);}
+    /* Contact Section: vertical layout */
+    .contact-list {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 16px;
+      margin: 14px 0 0 0;
+      list-style: none;
+      padding-left: 0;
+    }
+    .contact-icon {
+      width: 38px;
+      height: 38px;
+      background: var(--contact-icon-bg);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.7em;
+      box-shadow: 0 2px 7px rgba(0,0,0,.07);
+      margin-right: 9px;
+      transition: background 0.2s;
+    }
+    .contact-link {
+      font-size: 1.09em;
+      color: var(--link);
+      font-weight: 500;
+      text-decoration: none;
+      transition: color 0.17s;
+      display: flex;
+      align-items: center;
+    }
+    .contact-link:hover { color: #4b2679; }
+    .contact-info { margin-top: 10px; font-size: 1.13em; color: var(--fg);}
+    .contact-icon svg { width:24px; height:24px; display:block;}
+    .contact-link:focus .contact-icon,
+    .contact-link:hover .contact-icon {
+      background: #a0aec0;
+    }
   </style>
 </head>
 <body>
   <button onclick="toggleTheme()" aria-label="Toggle theme" id="themeBtn">🌙</button>
   <div class="wrap">
     <header>
-      <img src="Tavishi_Headshot.jpeg" alt="Tavishi Sharma headshot">
+      <img src="Tavishi_Headshot.jpeg" alt="Tavishi Sharma headshot" />
       <div>
         <h1>Tavishi Sharma</h1>
-        <div class="subtitle">
-          BS, Computer Science @ ASU Barrett Honors &middot; Minor in Mathematics
-        </div>
-        <div class="small">
-          GPA: 3.88 &middot; Graduation: May 2026 &middot; Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025
-        </div>
+        <div class="subtitle">BS, Computer Science @ ASU Barrett Honors · Minor in Mathematics</div>
+        <div class="small">GPA: 3.88 · Graduation: May 2026 · Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025</div>
         <div class="links">
           <a class="chip" href="mailto:tavishisharma0505@gmail.com" aria-label="Email">Email</a>
           <a class="chip" href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener">GitHub</a>
@@ -183,35 +167,121 @@
         </div>
       </div>
     </header>
-    <div class="tab-row">
-      <button class="tab-btn active">About</button>
-      <button class="tab-btn">Projects</button>
-      <button class="tab-btn">Experience</button>
-      <button class="tab-btn">Skills</button>
-      <button class="tab-btn">Contact</button>
-    </div>
   </div>
+  <nav>
+    <div class="wrap">
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#experience">Experience</a>
+      <a href="#skills">Skills</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
   <main class="wrap">
     <section id="about">
       <h2>About</h2>
-      <p>BS student at Arizona State University (Barrett Honors). Computer Science major and Mathematics minor, with a passion for making technology accessible, collaborative, and impactful. Recent research at NASA JPL focuses on integrating <strong>human and robotic capabilities</strong> to enhance collaboration and resilience in space exploration.</p>
+      <p>BS student at Arizona State University (Barrett Honors). Computer Science major and Mathematics minor, with a passion for making technology accessible, collaborative, and impactful. 
+        Recent research at NASA JPL focuses on integrating <strong>human and robotic capabilities</strong> to enhance collaboration and resilience in space exploration.
+      </p>
       <p>Dean’s List, working toward innovative solutions in AI, robotics, and data systems.</p>
     </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <!-- your content -->
+    </section>
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <!-- your content -->
+    </section>
+    <section id="skills">
+      <h2>Skills & Certifications</h2>
+      <!-- your content -->
+    </section>
+    <!-- UPDATED Contact Section: now vertical -->
+    <section id="contact">
+      <h2>Contact</h2>
+      <ul class="contact-list">
+        <li>
+          <a class="contact-link" href="mailto:tavishisharma0505@gmail.com" aria-label="Email">
+            <span class="contact-icon">
+              <!-- Gmail SVG -->
+              <svg fill="none" viewBox="0 0 24 24">
+                <rect x="3" y="5" width="18" height="14" rx="2" fill="#fff"/>
+                <path d="M3 7.5L12 14.5L21 7.5" stroke="#ea4335" stroke-width="2"/>
+              </svg>
+            </span>
+            Gmail
+          </a>
+        </li>
+        <li>
+          <a class="contact-link" href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener" aria-label="GitHub">
+            <span class="contact-icon">
+              <!-- GitHub SVG -->
+              <svg viewBox="0 0 24 24" fill="#181717">
+                <path d="M12 2C6.477 2 2 6.484 2 12.013c0 4.428 2.868 8.184 6.839 9.522.5.093.682-.217.682-.482 0-.238-.009-.868-.014-1.704-2.782.605-3.369-1.343-3.369-1.343-.454-1.155-1.11-1.463-1.11-1.463-.909-.622.069-.609.069-.609 1.003.07 1.531 1.031 1.531 1.031.893 1.531 2.341 1.09 2.91.834.091-.647.35-1.09.636-1.342-2.221-.253-4.555-1.112-4.555-4.945 0-1.092.39-1.988 1.029-2.688-.104-.256-.446-1.28.098-2.67 0 0 .842-.27 2.76 1.025A9.545 9.545 0 0112 7.845c.853.004 1.713.115 2.518.337 1.918-1.295 2.76-1.025 2.76-1.025.544 1.39.202 2.414.099 2.671.64.7 1.029 1.596 1.029 2.688 0 3.841-2.337 4.688-4.566 4.936.359.309.677.917.677 1.848 0 1.335-.012 2.415-.012 2.745 0 .267.18.578.688.48A10.016 10.016 0 0022 12.012C22 6.484 17.523 2 12 2z"/>
+              </svg>
+            </span>
+            GitHub
+          </a>
+        </li>
+        <li>
+          <a class="contact-link" href="https://www.linkedin.com/in/tavishi-sharma05/" target="_blank" rel="noopener" aria-label="LinkedIn">
+            <span class="contact-icon">
+              <!-- LinkedIn SVG -->
+              <svg viewBox="0 0 24 24" fill="#0A66C2">
+                <rect x="2" y="2" width="20" height="20" rx="4" fill="#fff"/>
+                <path d="M7.5 8.5v7M7.5 7.5a1 1 0 110 2 1 1 0 010-2m4 7v-3a2 2 0 014 0v3" stroke="#0A66C2" stroke-width="2" stroke-linecap="round"/>
+              </svg>
+            </span>
+            LinkedIn
+          </a>
+        </li>
+        <li>
+          <span class="contact-icon">
+            <!-- Phone SVG -->
+            <svg viewBox="0 0 24 24" fill="#7d4b99">
+              <rect x="4" y="4" width="16" height="16" rx="4" fill="#fff"/>
+              <path d="M8 10a6 6 0 008 8M8 10V8a2 2 0 012-2h4a2 2 0 012 2v2" stroke="#7d4b99" stroke-width="2"/>
+            </svg>
+          </span>
+          <span class="contact-info">+1-602-570-1736</span>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <div>© <span id="y"></span> Tavishi Sharma. Built with plain HTML/CSS. <span class="small">Last updated: Sep 2025.</span></div>
+    </footer>
   </main>
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+    const links = Array.from(document.querySelectorAll('nav a'));
+    const ids = links.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
+    const onScroll = () => {
+      const y = window.scrollY + 100;
+      let activeIndex = 0;
+      ids.forEach((sec, i) => { if (sec.offsetTop <= y) activeIndex = i; });
+      links.forEach((a, i) => a.classList.toggle('active', i === activeIndex));
+    };
+    document.addEventListener('scroll', onScroll, { passive: true });
+    onScroll();
+  </script>
   <script>
     function toggleTheme() {
       document.body.classList.toggle('dark-mode');
       const isDark = document.body.classList.contains('dark-mode');
       document.getElementById('themeBtn').textContent = isDark ? '☀️' : '🌙';
-      localStorage.setItem('theme', isDark ? 'dark' : 'light');
     }
     window.onload = function() {
       const pref = localStorage.getItem('theme');
-      if (pref == 'dark') {
+      if (pref === 'dark') {
         document.body.classList.add('dark-mode');
         document.getElementById('themeBtn').textContent = '☀️';
       }
     }
+    document.getElementById('themeBtn').addEventListener('click', function() {
+      const isDark = document.body.classList.contains('dark-mode');
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    });
   </script>
 </body>
 </html>
