--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tavishi Sharma | Computer Science @ ASU</title>
   <meta name="description" content="Tavishi Sharma — Computer Science major, ASU Barrett Honors. Projects in AI, robotics, and data systems.">
-  <meta name="keywords" content="Tavishi Sharma, Arizona State University, Computer Science, AI, robotics, NASA JPL, Data Analytics, GEM5, finite state machine, bookstore management">
   <meta property="og:title" content="Tavishi Sharma | AI × Robotics × Data" />
   <meta property="og:description" content="Projects and experience at the intersection of computer science, robotics, and analytics.">
   <meta property="og:type" content="website" />
@@ -210,7 +209,8 @@
       <div>
         <h1>Tavishi Sharma</h1>
         <div class="subtitle">BS, Computer Science @ ASU Barrett Honors · Minor in Mathematics</div>
-        <div class="small">GPA: 3.88 · Graduation: May 2026 · Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025</div>
+        <div class="small">GPA: 3.88 · Graduation: May 2026</div>
+        <div class="small">Dean's List: Fall 2022, Spring 2023, Fall 2023, Spring 2024, Fall 2024, Spring 2025</div>
         <div class="links">
           <a class="chip" href="mailto:tavishisharma0505@gmail.com" aria-label="Email">Email</a>
           <a class="chip" href="https://github.com/Sharma-Tavishi" target="_blank" rel="noopener">GitHub</a>
@@ -237,9 +237,7 @@
         BS student at Arizona State University (Barrett Honors). Computer Science major and Mathematics minor, with a passion for making technology accessible, collaborative, and impactful. 
         Recent research at NASA JPL focuses on integrating <strong>human and robotic capabilities</strong> to enhance collaboration and resilience in space exploration.
       </p>
-      <p>
-        Dean’s List, working toward innovative solutions in AI, robotics, and data systems.
-      </p>
+    
     </section>
     <!-- Projects -->
     <section id="projects">
@@ -358,12 +356,14 @@
           <span class="contact-icon">
             <svg viewBox="0 0 24 24" fill="#7d4b99"><rect x="4" y="4" width="16" height="16" rx="4" fill="#fff"/><path d="M8 10a6 6 0 008 8M8 10V8a2 2 0 012-2h4a2 2 0 012 2v2" stroke="#7d4b99" stroke-width="2"/></svg>
           </span>
-          <span class="contact-info">+1-602-570-1736</span>
+          <a class="contact-info">+1-(602)-570-1736</span>
+          </a>
         </li>
       </ul>
     </section>
     <footer>
       <div>© <span id="y"></span> Tavishi Sharma. Built with plain HTML/CSS. <span class="small">Last updated: Sep 2025.</span></div>
+      <div> Template by Pragya Sharma </div>
     </footer>
   </main>
   <script>
