--- a/index.html
+++ b/index.html
@@ -353,10 +353,11 @@
           </a>
         </li>
         <li>
-          <span class="contact-icon">
-            <svg viewBox="0 0 24 24" fill="#7d4b99"><rect x="4" y="4" width="16" height="16" rx="4" fill="#fff"/><path d="M8 10a6 6 0 008 8M8 10V8a2 2 0 012-2h4a2 2 0 012 2v2" stroke="#7d4b99" stroke-width="2"/></svg>
-          </span>
-          <a class="contact-info">+1-(602)-570-1736</span>
+          <a class="contact-link" href="tel:+16025701736" aria-label="Phone">
+            <span class="contact-icon">
+              <svg viewBox="0 0 24 24" fill="#7d4b99"><rect x="4" y="4" width="16" height="16" rx="4" fill="#fff"/><path d="M8 10a6 6 0 008 8M8 10V8a2 2 0 012-2h4a2 2 0 012 2v2" stroke="#7d4b99" stroke-width="2"/></svg>
+            </span>
+            +1-(602)-570-1736
           </a>
         </li>
       </ul>
