--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       --chipfg: #c7d2fe;
       --card: #3a3d42;
       --accent: #22292f;
-      --highlight: #fff8dc;
+      --highlight: #D0BDF4;
       --toggle-bg: #ffffff;
       --toggle-text: #1a1a1a;
       --timeline: #4b2679;
@@ -59,7 +59,7 @@
     }
     .links{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
     .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;background:var(--chip);color:var(--chipfg);font-size:15px;border:1px solid rgba(0,0,0,0.05)}
-    nav{position:sticky;top:0;background:var(--bg);border-top:1px solid #e5e7eb;border-bottom:1px solid #e5e7eb;z-index:50}
+    nav{position:sticky;top:0;background:var(--bg);border-top:1px solid #D0BDF4;border-bottom:1px solid #D0BDF4;z-index:50}
     nav .wrap{display:flex;gap:16px;overflow:auto}
     nav a{padding:14px 6px;white-space:nowrap;color:var(--muted)}
     nav a.active, nav a:hover{color:var(--fg)}
