--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <h2>About</h2>
       <p>
         BS student at Arizona State University (Barrett Honors). Computer Science major and Mathematics minor, with a passion for making technology accessible, collaborative, and impactful. 
-        Recent research at NASA JPL focuses on integrating <strong>human and robotic capabilities</strong> to enhance collaboration and resilience in space exploration.
+        Recent research at NASA JPL focuses on integrating human and robotic capabilities to enhance collaboration and resilience in space exploration.
       </p>
     
     </section>
@@ -292,8 +292,9 @@
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <div class="timeline-date">Aug 2024 &mdash; May 2025</div>
-            <b>Research Fellow, NASA JPL (ASU)</b>
+            <b>Research Fellow, ASU</b>
             <ul>
+              <li>Project sponsored by NASA JPL</li>
               <li>Led AI/human-robot collaboration research</li>
               <li>Designed resilient space exploration systems</li>
               <li>Co-authored technical paper for publication</li>
