--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
     </div>
   </nav>
   <main class="wrap">
-    <!-- About -->
     <section id="about">
       <h2>About</h2>
       <p>
@@ -238,7 +237,6 @@
       </p>
     
     </section>
-    <!-- Projects -->
     <section id="projects">
       <h2>Projects</h2>
       <div class="grid">
@@ -260,7 +258,6 @@
         </div>
       </div>
     </section>
-    <!-- Timeline Experience -->
     <section id="experience">
       <h2>Work Experience</h2>
       <div class="timeline">
@@ -324,7 +321,6 @@
         <li><strong>Languages:</strong> English, A1 French [Ministry of Education, France]</li>
       </ul>
     </section>
-    <!-- UPDATED Contact Section: now vertical -->
     <section id="contact">
       <h2>Contact</h2>
       <ul class="contact-list">
@@ -381,17 +377,22 @@
     onScroll();
   </script>
   <script>
+    // Default to dark mode
+    window.onload = function() {
+      document.body.classList.add('dark-mode');
+      document.getElementById('themeBtn').textContent = '☀️';
+      // User theme preference override
+      const pref = localStorage.getItem('theme');
+      if (pref === 'light') {
+        document.body.classList.remove('dark-mode');
+        document.getElementById('themeBtn').textContent = '🌙';
+      }
+    }
     function toggleTheme() {
       document.body.classList.toggle('dark-mode');
       const isDark = document.body.classList.contains('dark-mode');
       document.getElementById('themeBtn').textContent = isDark ? '☀️' : '🌙';
-    }
-    window.onload = function() {
-      const pref = localStorage.getItem('theme');
-      if (pref === 'dark') {
-        document.body.classList.add('dark-mode');
-        document.getElementById('themeBtn').textContent = '☀️';
-      }
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
     }
     document.getElementById('themeBtn').addEventListener('click', function() {
       const isDark = document.body.classList.contains('dark-mode');
