--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     }
   </style>
 </head>
-<body>
+<body class="dark-mode">
   <!-- Toggle Button, always visible at top-right -->
   <button onclick="toggleTheme()" aria-label="Toggle theme" id="themeBtn">🌙</button>
   <div class="wrap">
